fixing cicd pipline